# quantum

./: .gitignore  Cargo.toml  LICENSE  README.md  example-config.json  u66.session
src/: main.rs  quantum.rs  telegram.rs  u66.rs  words.rs
src/models/: config.rs  dialog.rs  message.rs  mod.rs  wait_message.rs
