[package]
name = "u66"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
grammers-session = { git = "https://github.com/Lonami/grammers" }
dotenv = "0.15.0"
grammers-client = { git = "https://github.com/Lonami/grammers" }
futures-util = "0.3.28"
log = "0.4.20"
simple_logger = "4.2.0"
tokio = { version = "1.33.0", features = ["full"] }
lazy_static = "1.4.0"
